--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="styles/main.css">
 	<!--Slick nav code-->
 	<link rel="stylesheet" href="styles/slicknav.css">
-	<script src="https:code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="js/jquery.slicknav.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
