--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="js/jquery.slicknav.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
-		$('#nav_menu').slicknav({prependTo:"mobilemenu"});
+		$('#nav_menu').slicknav({prependTo:"#mobilemenu"});
 	});
 	</script>
 </head>
